# MediaFlick-Desktop

./: .agent-source.json  .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  build.rs  justfile  package-lock.json
.codex/: hooks.json
.github/workflows/: ci.yml  draft-release.yml
.impeccable/: design.json
.pi/prompts/: cl.md
docs/: playback-regression-invariants.md
packaging/windows/: jellyfin-mpv.iss  mediaflick-desktop.iss
resources/linux/: io.github.phob.MediaFlickDesktop.desktop  io.github.phob.MediaFlickDesktop.metainfo.xml  org.jellyfin.JellyfinMPV.desktop  org.jellyfin.JellyfinMPV.metainfo.xml
resources/macos/: AppIcon.icns  Info.plist.in
resources/win/: iconres.rc.in
scripts/: build-linux-appimage.sh  build-macos-dmg.sh  build-windows-installer.ps1  prepare-release.py  stage-windows-release.ps1
sketches/: mpc-hc-integration-plan.html  player-backend-settings.html
src/: cef_shell.rs  cli.rs  external_mpv.rs  jellyfin_bridge.js  jellyfin_bridge.rs  logger.rs  main.rs  mpv_controller.rs  playback_reporter.rs  settings.rs
src/app/: about.rs  about_dialog.js  cli.rs  client_settings.rs  client_settings_dialog.js  error_toast.js  error_toast.rs  instance.rs  logger.rs  mod.rs  mpv_setup.rs  settings.rs  update_toast.js  updater.rs
src/cef/: mod.rs
src/jellyfin/: bridge.js  bridge.rs  media_segments.rs  mod.rs  playback_reporter.rs
src/mpv/: controller.rs  external.rs  input.rs  mod.rs  playback_transition.rs
src/player/: mod.rs  segments.rs
src/player/mpchc/: controller.rs  mod.rs  protocol.rs  transport.rs
src/ui/: load_error.html  welcome.html
src/windows/: command_shell.rs  focus.rs  icon.rs  job.rs  mod.rs
