[package]
name = "jellyfin-mpv"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "jellyfin-mpv"
path = "src/main.rs"

[dependencies]
cef = { version = "=148.4.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "env",
    "help",
    "usage",
    "error-context",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
